# chicken-eggs

./: CMakeLists.txt  ChickenExtensionConfig.cmake.in  README.md  egg-locations
base64/: base64.scm  base64.setup
binary-search/: binary-search.scm  binary-search.setup  binary-search.types
binary-search/tests/: run.scm
bind/: CMakeLists.txt  bind-translator.scm  bind.setup  chicken-bind.scm
bind/tests/: foreign-transformer-test.scm  run.scm
bitstring/: CMakeLists.txt  README  bitstring.release-info  bitstring.scm  bitstring.setup
blob-utils/: CMakeLists.txt  blob-hexadecimal.scm  blob-hexadecimal.types  blob-set-int.inline  blob-set-int.scm  blob-set-int.types  blob-utils.setup  pack-integer.scm  packed-integer.wiki
blowfish/: CMakeLists.txt  Makefile  blowfish.release-info  blowfish.scm  blowfish.setup
blowfish/blowfish/: blowfish.c  blowfish_test.c
blowfish/tests/: run.scm
check-errors/: CMakeLists.txt  check-errors.scm  check-errors.setup  check-errors.types  srfi-4-checks.inline  srfi-4-checks.scm  srfi-4-checks.types  srfi-4-errors.scm  srfi-4-errors.types  type-checks.inline  type-checks.scm  type-checks.types  type-errors.inline  type-errors.scm  type-errors.types
concurrent-native-callbacks/: CMakeLists.txt
condition-utils/: CMakeLists.txt  condition-utils.scm  condition-utils.setup  condition-utils.types
coops/: CMakeLists.txt  coops.scm  coops.setup
coops/tests/: bench.scm  run.scm  tests.scm
crc32/: CMakeLists.txt  crc32.scm  crc32.setup
crc32/tests/: run.scm
dbus/: CMakeLists.txt  dbus.scm
dbus/patches/: tassq.patch
defstruct/: CMakeLists.txt
easyffi/: CMakeLists.txt  TODO  chicken-wrap.scm  easyffi-base.scm  easyffi.l  easyffi.scm  easyffi.setup  runsilex.scm
feature-test/: CMakeLists.txt  feature-test.setup
filepath/: CMakeLists.txt  filepath.scm  filepath.setup
fmt/: CMakeLists.txt  README.chicken  fmt.setup
fmt/diffs/: 00-fmt-wrap.diff.txt  01-fmt-last-padding.diff.txt  02-fmt-one-column.diff.txt  03-test-fmt.diff.txt  04-wrap-lines-break-fix.diff.txt  05-unicode-columnar.diff.txt
fmt/tests/: run.scm
foreigners/: CMakeLists.txt  foreigners.scm  foreigners.setup
format/: CMakeLists.txt  format.scm  format.setup  format.txt
getopt-long/: CMakeLists.txt  getopt-long.scm  getopt-long.setup
iset/: CMakeLists.txt  iset.release-info  iset.scm  iset.setup
kvlists/: CMakeLists.txt
linenoise/: CMakeLists.txt  README  example.scm  linenoise.scm  linenoise.setup
lookup-table/: CMakeLists.txt  lookup-table-body.scm  lookup-table-synch.scm  lookup-table-synch.types  lookup-table-unsafe-synch.scm  lookup-table-unsafe-synch.types  lookup-table-unsafe.scm  lookup-table-unsafe.types  lookup-table.scm  lookup-table.setup  lookup-table.types
lru-cache/: CMakeLists.txt  lru-cache.scm  lru-cache.setup
mailbox/: CMakeLists.txt  chicken-thread-object-inlines.scm  inline-queue.scm  mailbox.scm  mailbox.setup
mailbox-threads/: CMakeLists.txt
make/: CMakeLists.txt  make.scm  make.setup
matchable/: CMakeLists.txt  matchable.setup
md5/: CMakeLists.txt  md5-base.c  md5-ssl.c  md5.scm  md5.setup
memory-mapped-files/: memory-mapped-files.scm  memory-mapped-files.setup  memory-mapped-files.types
memory-mapped-files/tests/: run.scm
message-digest/: CMakeLists.txt  message-digest-basic.scm  message-digest-basic.types  message-digest-bv.scm  message-digest-bv.types  message-digest-int.scm  message-digest-int.types  message-digest-item.scm  message-digest-item.types  message-digest-old.scm  message-digest-parameters.scm  message-digest-parameters.types  message-digest-port.scm  message-digest-port.types  message-digest-primitive.inline  message-digest-primitive.scm  message-digest-primitive.types  message-digest-srfi-4.inline  message-digest-srfi-4.scm  message-digest-srfi-4.types  message-digest-support.inline  message-digest-support.scm  message-digest-support.types  message-digest-type.inline  message-digest-type.scm  message-digest-type.types  message-digest-update-item.scm  message-digest-update-item.types  message-digest.scm  message-digest.setup  message-digest.types
miscmacros/: CMakeLists.txt  miscmacros.scm  miscmacros.setup
monad/: CMakeLists.txt
object-evict/: CMakeLists.txt  object-evict.scm  object-evict.setup  object-evict.types
parley/: CMakeLists.txt  delete-word.scm  loop.scm  parley-auto-completion.scm  parley.scm  parley.setup
pathname-expand/: CMakeLists.txt
posix/: types.db
queues/: queues.scm  queues.setup  queues.types
record-variants/: CMakeLists.txt  record-variants.setup
regex/: CMakeLists.txt
scsh-process/: CMakeLists.txt  scsh-process.release-info  scsh-process.scm  scsh-process.setup
setup-api/: CMakeLists.txt  setup-api.h  setup-api.scm
setup-helper/: CMakeLists.txt  setup-helper-mod.scm  setup-helper.setup
sha1/: CMakeLists.txt  sha1-base.c  sha1.scm  sha1.setup
shell/: CMakeLists.txt  shell.scm  shell.setup
silex/: CMakeLists.txt  silex.setup
socket/: .gitignore  CMakeLists.txt  socket-config.scm  socket-features.scm  socket-options.scm  socket.scm  socket.setup
sql-de-lite/: CMakeLists.txt  sql-de-lite.scm
srfi-13/: CMakeLists.txt
srfi-14/: CMakeLists.txt
srfi-18/: CMakeLists.txt  srfi-18.scm  srfi-18.setup  srfi-18.types
srfi-69/: CMakeLists.txt  srfi-69.scm
string-utils/: CMakeLists.txt  memoized-string.scm  memoized-string.types  string-hexadecimal.scm  string-hexadecimal.types  string-utils.scm  string-utils.setup  string-utils.types  to-hex.scm  unicode-utils.inline  unicode-utils.scm  unicode-utils.types
stty/: CMakeLists.txt  stty.scm  stty.setup
synch/: CMakeLists.txt  synch.scm  synch.setup
tcp/: CMakeLists.txt  tcp.scm  tcp.types
test/: test-support.scm  test.scm  test.setup
type-stubs/: CMakeLists.txt  type-stubs-empty.scm  type-stubs.release-info  type-stubs.scm  type-stubs.setup
typed-records/: CMakeLists.txt  typed-records.scm  typed-records.setup
utf8/: CMakeLists.txt  utf8-case-map.scm  utf8-lolevel.scm  utf8-srfi-13.scm  utf8.scm  utf8.setup
variable-item/: CMakeLists.txt  variable-item.scm  variable-item.setup
(+7 files in other folders)
